# AdventOfCode

./: .gitignore  LICENSE  README.md  aoc.cabal  cabal.project  flake.nix  hie.yaml
.github/workflows/: CI.yaml
app/: Main.hs
src/: Lib.hs
src/Year2015/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
src/Year2016/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
src/Year2017/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
src/Year2018/: Day1.hs
test/: Spec.hs
