cabal-version:   2.4
name:            aoc
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Tomasz Lutoborski
maintainer:      Tomasz Lutoborski <tomasz@lutoborski.net>
copyright:       2024 Tomasz Lutoborski
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/aoc#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/aoc.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
                 , Year2015.Day1
                 , Year2015.Day2
                 , Year2015.Day3
                 , Year2015.Day4
                 , Year2015.Day5
                 , Year2016.Day1
                 , Year2016.Day2
                 , Year2016.Day3
                 , Year2016.Day4
                 , Year2016.Day5
                 , Year2017.Day1
  build-depends:
    , containers
    , mtl
    , text
    , pureMD5
    , bytestring
    , split

executable aoc-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  aoc
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite aoc-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , aoc
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark aoc-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , aoc

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
